cmake_minimum_required(VERSION 3.31)
project(os_learn C)

set(CMAKE_C_STANDARD 11)

add_executable(2-1-hello 1-Linux是怎样工作的/2/2-1/hello.c)
add_executable(2-4-ppidloop 1-Linux是怎样工作的/2/2-4/ppidloop.c)
add_executable(3-2-fork 1-Linux是怎样工作的/3/3-2/fork.c)
add_executable(3-3-fork_and_exec 1-Linux是怎样工作的/3/3-3/fork_and_exec.c)
add_executable(4-2-sched 1-Linux是怎样工作的/4/4-2/sched.c)
add_executable(4-20-sched_nice 1-Linux是怎样工作的/4/4-20/sched_nice.c)
add_executable(5-6-segv 1-Linux是怎样工作的/5/5-6/segv.c)
add_executable(5-8-mmap 1-Linux是怎样工作的/5/5-8/mmap.c)
add_executable(5-12-filemap 1-Linux是怎样工作的/5/5-12/filemap.c)
add_executable(demand_paging 1-Linux是怎样工作的/5/5-13/demand_paging.c)
add_executable(cow 1-Linux是怎样工作的/5/5-14/cow.c)
